main.tf
#Configure AWS provider
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIA5636JNKKTJKOKGCQWV3"
  secret_key = "iRbGITTxKhhbaHDJjdjuBDT5ivmGBvWsp"
}

#1. Create VPC
resource "aws_vpc" "prod-vpc" {
  cidr_block       = "10.0.0.0/16"
  tags = {
    Name = "prod"
  }
}

#2. Create Internet Gateway
 resource "aws_internet_gateway" "int-gw" {
  vpc_id = aws_vpc.prod-vpc.id
  tags = {
    Name = "prod"
  }
}


# 3. Create Custom Route Table 

resource "aws_route_table" "public-route" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.int-gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.int-gw.id
  }

  tags = {
    Name = "prod"
  }
}

# 4. Create Subnet 

resource "aws_subnet" "subnet1" {
  vpc_id     = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod"
  }
}


#5. Associate Subnet  to Route Table 

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.public-route.id
}

#6. Create SG to allow 22, 80 and 443

resource "aws_security_group" "allow-web" {
  name        = "allow-web-traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]  
 }

  ingress {
    description = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]  
 }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]  
 }

 tags = {
   Name = "allow-web-traffic"
 }
}

#7. Create Network Interface
resource "aws_network_interface" "webserver-nic" {
  subnet_id       = aws_subnet.subnet1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow-web.id]
}

#8. Assign a elastic ip to nic created 

resource "aws_eip" "one" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.webserver-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.int-gw]
}

# Create ubuntu web server 

resource "aws_instance" "web" {
  ami           = "ami-07d9b9ddc6cd8dd30"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "terrakey"

  network_interface {
  network_interface_id = aws_network_interface.webserver-nic.id
  device_index         = 0
  }

   user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF
  tags = {
    Name = "web-server"
  }
}

# Set up outputs for important information

output "server_public_ip" {
  value = aws_eip.one.public_ip
}
